<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="Login">Login</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop scan</string>
    <string name="button">Download Collected Data</string>
    <string name="display">Display Data</string>
    <string name="upload">Upload Data</string>
    <string name="characteristic">Characteristic:</string>
    <string name="value">Value:</string>
    <string name="loc_perm">Connecting to BLE devices requires location permissions.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="overflow_button">overflow_button</string>

    <!-- Strings related to login -->
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">  Password</string>
    <string name="action_sign_in">  Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">LOGIN</string>
    <string name="to">TO</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="start_collection">Turn On Station</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerButton">Register</string>
    <string name="register_account">Register account</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="Passwords_dont_match">Passwords don\'t match</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="image_login">image_login_lake</string>
    <string name="green">Green: </string>
    <string name="yellow">Yellow: </string>
    <string name="red">Red: </string>
    <string name="orange">Orange: </string>
    <string name="blue">Blue: </string>
    <string name="blueinfo">Downloading Data From Station</string>
    <string name="orangeinfo">Station Status Unknown</string>
    <string name="greeninfo">Station Collecting Data</string>
    <string name="yellowinfo">Station Paired</string>
    <string name="redinfo">Processing</string>
    <string name="refresh">refresh</string>
    <string name="register_device">Register Device</string>
    <string name="title_register_station">Register a Station</string>
    <string name="in_order_to_access">In order to access a weather station, you first need to register it with your account. The MAC address will be found on the side of your weather station.</string>
    <string name="mac_address">MAC Address</string>
    <string name="sign_out">Sign out</string>

    <string name="contacts">Cyber Environment uses the contacts permission to autofill login credentials.</string>
    <string name="reg_success">Station was successfully registered.</string>
    <string name="not_registered">The station you selected is not registered to you.</string>
    <string name="hint_station_nickname">Station Nickname</string>

    <string name="light_status_key">"light_status_key</string>
    <string name="error_registration">Could not register an account with those credentials.</string>
    <string name="error_login">There was an error logging in.</string>

    <!-- Labels for Encryption Visualization -->
    <string name="encryption_label">Encryption Sample</string>
    <string name="decryption_label">Decryption Sample</string>
    <string name="accept_decryption">Accept</string>

</resources>
